--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/typeorm": "^7.1.5",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.3.2",
     "class-validator": "^0.13.1",
     "jsonwebtoken": "^8.5.1",
+    "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
