--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/swagger": "^4.7.12",
     "@nestjs/typeorm": "^7.1.5",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.3.2",
@@ -40,6 +41,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
+    "swagger-ui-express": "^4.1.6",
     "ts-mapper": "^1.2.4",
     "typeorm": "^0.2.30"
   },
